--- a/msavaliadorcredito/src/main/resources/application.yml
+++ b/msavaliadorcredito/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   application:
     name: msavaliadorcredito
   rabbitmq:
-    host: localhost
+    host: ${RABBITMQ_SERVER}
     port: 5672
     username: guest
     password: guest
@@ -14,7 +14,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://curso-ms-eureka-user:curso-ms-eureka-user@localhost:8761/eureka
+      defaultZone: http://curso-ms-eureka-user:curso-ms-eureka-user@${EUREKA_SERVER}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
