--- a/msclientes/src/main/resources/application.yml
+++ b/msclientes/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://curso-ms-eureka-user:curso-ms-eureka-user@localhost:8761/eureka
+      defaultZone: http://curso-ms-eureka-user:curso-ms-eureka-user@${EUREKA_SERVER}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
